--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
 # This is the default format.
 # For more see: https://github.com/mojombo/jekyll/wiki/Permalinks
-permalink: /:categories/:year/:month/:day/:title
+permalink: /:year/:month/:day/:title
 
-exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
-auto: true
+exclude: %w[.rvmrc README.md Capfile Gemfile Gemfile.lock Rakefile]
 pygments: true
 
 # Themes are encouraged to use these universal variables
