--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 destination: ./_site
-auto:        false
 lsi:         false
-server_port: 4000
+port:        4000
 pygments:    false
 markdown:    maruku
 permalink:   date
