Reducing contents of footer

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Gregor Schmidt - freelance web developer
+title: Gregor Schmidt
 email: schmidt@nach-vorne.eu
 description: >
   Gregor Schmidt is a web developer based in Berlin, Germany. He has been
@@ -7,9 +7,6 @@ description: >
   JavaScript project in 2006. He knows Bootstrap, jQuery, Backbone and friends.
 baseurl: ""
 url: "https://schmidt.github.io"
-twitter_username: schmidtwisser
-github_username:  schmidt
-
 
 permalink: ":slug"
 
