Using nach-vorne.eu

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: >
   the Ruby User Group Berlin since then. He worked on his first Single-Page
   JavaScript project in 2006. He knows Bootstrap, jQuery, Backbone and friends.
 baseurl: ""
-url: "https://schmidt.github.io"
+url: "http://www.nach-vorne.eu"
 
 permalink: ":slug"
 
